--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+font-family: 'Alata', sans-serif;
+justify-content: center;
+}
+h1 {
+font-family: 'Alata', sans-serif;
+justify-content: center;
+color: rgb(109, 108, 108);
+}
+
