--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,126 @@
 // Specific CSS for your home-page
+
+.container {
+position: relative;
+
+}
+
+body {
+  margin: 100px;
+font-family: 'Alata', sans-serif;
+justify-content: center;
+
+}
+h1, h2, h3 {
+font-family: 'Alata', sans-serif;
+}
+
+h1 {
+  color: rgb(109, 108, 108);
+
+}
+h3 {
+  padding-top: 20px;
+  font-size: 20px;
+   color: rgb(109, 108, 108);
+   position:center
+}
+a {
+  text-decoration: underline;
+  color: rgb(109, 108, 108);
+  padding-right: 25px;
+  font-size: 20px;
+
+}
+
+a :hover {
+  opacity: 2;
+  color: pink;
+}
+.text-center {
+  text-align: center;
+}
+
+.banner {
+  color: white;
+  text-align: center;
+ align-content: center;
+ height: 1000px;
+   background-size: cover;
+     position: sticky;
+
+
+}
+.navbar-lewagon {
+  justify-content: space-between;
+  display: flex;
+  background: white;
+  width: 100%;
+  height: 150px;
+}
+
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 150px;
+  height: 150px;
+  padding-left: 30px;
+    color: rgb(109, 108, 108);
+
+}
+
+.footer {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+  color: pink;
+}
+.footer .fa-heart {
+  color: pink;
+}
+
+.search-form-control {
+  position: relative;
+}
+.search-form-control .btn {
+  // position: absolute;
+  font-size: 20px;
+  top: 8px;
+  bottom: 8px;
+  right: 8px;
+  color: white;
+}
+
+.search-form-control .form-control {
+  height: 3.5rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border: 1px solid #E7E7E7;
+}
+
+
+.search-form-control .form-control:focus {
+  border: 1px solid #1EDD88;
+  outline: none !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
