--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Cocktail</h1>
+  <h1>THE COCKTAILSY</h1>
 
-<%= render 'form', cocktail: @cocktail %>
+<h1>Make a new Cocktail!</h1>
+<%= form_for(@cocktail) do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.submit %>
+<% end %>
 
-<%= link_to 'Back', cocktails_path %>
+<p><%= link_to 'Back', cocktails_path %></p>
+
