--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,9 +1,21 @@
-<p id="notice"><%= notice %></p>
+  <h1>THE COCKTAILSY</h1>
 
-<p>
-  <strong>Name:</strong>
-  <%= @cocktail.name %>
-</p>
+  <h1><%= @cocktail.name %></h1>
 
-<%= link_to 'Edit', edit_cocktail_path(@cocktail) %> |
-<%= link_to 'Back', cocktails_path %>
+   <p><%= image_tag "espresso_martini.png", alt: "Cocktail", width: 200%></p>
+    <% @cocktail.doses.each do |dose| %>
+     <h2><%= @dose.description %></h2>
+       <% end %>
+
+  <p>
+    <%= link_to "Add a recipe", new_cocktail_dose_path(@cocktail) %>
+    </br>
+    <%= link_to "Back to cocktails", cocktails_path() %>
+    </br>
+    <%= link_to "Edit cocktail", edit_cocktail_path(@cocktail) %>
+    </br>
+    <%= link_to "Delete #{@cocktail.name}",
+            cocktail_path(@cocktail),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+  </p>
